[package]
name = "bank_server"
version = "0.1.0"
authors = ["Afront <3943720+Afront@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "0.6.1"
hyper = "0.13.1"
router = "0.6.0"
logger = "0.4.0"
env_logger = "0.7.1"

#tokio = "0.2.9"

#mime = "0.3.16"
futures = "0.3.1"
serde = "1.0.104"
serde_derive = "1.0.104"